[package]
name = "terustry"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
tracing = "0.1"
tracing-subscriber ={ version = "0.3", features = ["json", "env-filter", "fmt"] }
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
log = "0.4.20"
handlebars = "5.1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "net", "macros"] }
reqwest = { version = "0.11", features = ["rustls", "json"] }
axum = { version = "0.7" }
anyhow = "1.0.80"
cached ={ version = "0.49.2", features = ["async", "async_tokio_rt_multi_thread"] }